--- a/src/templates/actors/fragments/char/tab-combat.html
+++ b/src/templates/actors/fragments/char/tab-combat.html
@@ -13,7 +13,7 @@
       </div>
     {{/each}}
   </div>
-  <div class="grid grid-cols-3">
+  <div class="grid grid-cols-3 mt-2">
     <div>
       {{>
       "systems/swnr/templates/actors/fragments/quick-skill.html" quickskill=actor.data.data.tweak.quickSkill1
