--- a/src/templates/actors/ship-sheet.html
+++ b/src/templates/actors/ship-sheet.html
@@ -189,9 +189,9 @@
           </label>
         </div>
 
-
-
-
+        <!-- end Grid div for header -->
+      </div>
+      <div class="flex-grow grid grid-cols-7 items-center gap-1">
         <!--buttons-->
         <div class="cost flex flex-col items-center ">
           <a><i class="fas fa-route  fa-2x travel-button"></i></a>
@@ -222,8 +222,12 @@
           <a><i class="fas fa-tools  fa-2x repair-button"></i></a>
           {{localize 'swnr.sheet.ship.repair-all'}}
         </div>
-        <!-- end Grid div for header -->
-      </div>
+
+        <div class="cost flex flex-col items-center ">
+          <a><i class="fas fa-satellite-dish  fa-2x sensor-button"></i></a>
+          {{localize 'swnr.sheet.ship.sensor-roll'}}
+        </div>
+      </div><!-- end buttons-->
 
 
       <div class="abilities grid grid-3col">
