show remembered modifier

--- a/src/templates/dialogs/roll-skill.html
+++ b/src/templates/dialogs/roll-skill.html
@@ -20,7 +20,7 @@
   <div>
     {{! mod }}
     <label for="modifier">{{localize 'swnr.chat.modifier'}}: </label>
-    <input name="modifier" type="number" step="1" value="0" class="w-16 px-1.5 py-3 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"/>
+    <input name="modifier" type="number" step="1" value="{{ modifier }}" class="w-16 px-1.5 py-3 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"/>
   </div>
   <div>
     {{! stat}}
