--- a/src/templates/actors/fragments/item-table.html
+++ b/src/templates/actors/fragments/item-table.html
@@ -40,6 +40,16 @@
           </select>
         </div>
         <div class="item-controls text-right flex-shrink">
+          {{#if (eq ../itemType "weapon")}}
+            {{#if (ne item.data.data.ammo.type "none")}}
+                <a
+                  class="item-control item-reload text-gray-600 hover:text-purple-800 transition-colors"
+                  title="{{localize 'swnr.sheet.reload-item'}}"
+                >
+                  <i class="fas fa-retweet"></i>
+                </a>
+            {{/if}}
+          {{/if}}
           <a class="item-control item-show text-gray-600 hover:text-purple-800 transition-colors" title='{{localize 'swnr.sheet.show-item'}}'>
             <i class="fas fa-comment"></i></a>
           <a class="item-control item-edit text-gray-600 hover:text-purple-800 transition-colors" title='{{localize 'swnr.sheet.edit-item'}}'>
