char sheet updates

--- a/src/swnr.pcss
+++ b/src/swnr.pcss
@@ -70,6 +70,7 @@ a:hover {
   @apply transition-text-shadow text-shadow text-shadow-transparent hover:text-shadow-gray-600;
 }
 .tabs .item.active {
+  text-decoration-line: underline;
   @apply text-shadow-gray-600;
 }
 
@@ -163,7 +164,7 @@ $shadowColor: black;
 }
 
 .sheet-button {
-  @apply flex rounded-lg px-1.5 py-1 border border-coolGray-900 bg-coolGray-500 
+  @apply flex rounded-lg px-1.5 py-1 border border-coolGray-900 bg-coolGray-600 
     hover:bg-coolGray-300 hover:border-coolGray-700 text-coolGray-200
     hover:text-black transition-colors cursor-pointer;
 }
@@ -176,7 +177,7 @@ $shadowColor: black;
 
 
 .item-titles {
-  @apply bg-warmGray-700 border border-warmGray-900 py-0.5 px-2 mt-2 font-bold text-white;
+  @apply bg-blueGray-800 border border-blueGray-900 py-0.5 px-2 mt-2 font-bold text-white;
 }
 
 .item-working {
