work on editor clean up

--- a/src/templates/actors/drone-sheet.html
+++ b/src/templates/actors/drone-sheet.html
@@ -219,8 +219,8 @@
                     <div class="item-name flex2">Description </div>
                   </li>
                 </div>
-                <div class="bg-gray-300 border border-gray-700 rounded-md p-2 mt-4">
-                  {{editor content=data.data.description target="data.description" button=true
+                <div class="bg-gray-300 border border-gray-700 rounded-md p-2 mt-4 h-50">
+                  {{editor descriptionHTML target="data.description" button=true
                   owner=owner editable=editable}}
                 </div>
               </div>
@@ -233,7 +233,7 @@
                   </li>
                 </div>
                 <div class="bg-gray-300 border border-gray-700 rounded-md p-2 mt-4">
-                  {{editor content=data.data.mods target="data.mods" button=true
+                  {{editor modsHTML target="data.mods" button=true  
                   owner=owner editable=editable}}
                 </div>
               </div>
