--- a/src/templates/actors/vehicle-sheet.html
+++ b/src/templates/actors/vehicle-sheet.html
@@ -163,7 +163,7 @@
                   </li>
                 </div>
                 <div class="bg-gray-300 border border-gray-700 rounded-md p-2 mt-4">
-                  {{editor content=data.data.description target="data.description" button=true
+                  {{editor descriptionHTML target="data.description" button=true
                   owner=owner editable=editable}}
                 </div>
               </div>
@@ -176,7 +176,7 @@
                   </li>
                 </div>
                 <div class="bg-gray-300 border border-gray-700 rounded-md p-2 mt-4">
-                  {{editor content=data.data.mods target="data.mods" button=true
+                  {{editor modsHTML target="data.mods" button=true
                   owner=owner editable=editable}}
                 </div>
               </div>
