--- a/src/templates/items/fragments/desc.html
+++ b/src/templates/items/fragments/desc.html
@@ -23,6 +23,6 @@
   <h2 class="text-base p-1">{{localize 'swnr.sheet.description'}}</h2>
   <div class="p-1 border-t border-black">
     {{!-- TODO: fix is for wrapping around text, because this is a little fixed --}}
-    {{editor descriptionHTML target="data.description" button=true owner=owner editable=editable engine="prosemirror" }}
+    {{editor descriptionHTML target="data.description" button=true owner=owner editable=editable }}
   </div>
 </div>
