--- a/src/templates/actors/faction-sheet.html
+++ b/src/templates/actors/faction-sheet.html
@@ -153,7 +153,7 @@
           class="min-w-full text-center px-1.5 py-1 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
           name="data.factionGoalDesc" value="{{data.data.factionGoalDesc}}" /> --}}
         <div class="bg-gray-300 border border-gray-700 rounded-md p-2 w-96">
-          {{editor content=data.data.factionGoalDesc target="data.factionGoalDesc" button=true owner=owner
+          {{editor factionGoalDescHTML target="data.factionGoalDesc" button=true owner=owner
           editable=editable
           }}
         </div>
@@ -213,7 +213,7 @@
             <h2 class="text-base p-1">{{localize 'swnr.sheet.description'}}</h2>
             <div class="p-1 border-t border-black">
               {{!-- TODO: fix is for wrapping around text, because this is a little fixed --}}
-              {{editor content=data.data.description target="data.description" button=true owner=owner editable=editable
+              {{editor descriptionHTML target="data.description" button=true owner=owner editable=editable
               }}
             </div>
           </div>
