--- a/src/templates/actors/fragments/char/header.html
+++ b/src/templates/actors/fragments/char/header.html
@@ -142,7 +142,6 @@
           ></div>
         </div>
       </div>
-
       <div class="flex gap-2 items-center">
         <div
           class="bg-blue-300 border border-blue-900 w-full rounded-full h-4 overflow-hidden"
@@ -155,9 +154,26 @@
       </div>
       <div class="flex gap-2 items-center">
       </div>
-      <div class="flex gap-2 items-center">
+      <!-- speed/movement -->
+      <div class="flex gap-2 items-center text-lg">
+        <label>{{localize 'swnr.sheet.movement'}}</label>
+          <div class="flex w-12">
+          <input
+            class="border border-r-0 border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-l-md text-right"
+            type="number"
+            name="data.speed"
+            min="0"
+            step="1"
+            value="{{actor.data.data.speed}}"
+          />
+          <div
+            class="border border-l-0 border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-r-md text-base pl-0.5 pr-1"
+          >
+            m
+          </div>
+        </div>
       </div>
-      
+
 
       <!-- Saves -->
       <div
