nav bar for ship and mech

--- a/src/templates/actors/mech-sheet.html
+++ b/src/templates/actors/mech-sheet.html
@@ -110,7 +110,8 @@
           {{!-- Sheet Body --}}
 
       <div class="w-full">
-        <nav class="pc-sheet-tabs tabs py-1 flex flex-wrap gap-2 border-t border-b border-trueGray-500 border1 mb-1"
+        <nav 
+          class="pc-sheet-tabs tabs py-1 flex flex-wrap gap-2 border-t border-b border-l border-r border-blueGray-900 border0 mb-1 bg-blueGray-700 text-gray-100"
           data-group="primary">
           <a class="item" data-tab="mods">
             {{localize 'swnr.sheet.ship.weapons-tab'}}
