small npc clean up

--- a/src/templates/actors/npc-sheet.html
+++ b/src/templates/actors/npc-sheet.html
@@ -3,7 +3,7 @@
     <div class="flex gap-2">
       <div class="flex-shrink-0 h-40 hidden md:block lg:h-16 md:w-16">
         <img
-          class="shadow-md bg-gray-100 h-full w-full object-contain profile-img"
+          class="h-full w-full object-contain profile-img"
           src="{{actor.img}}"
           title="{{actor.name}}"
           data-edit="img"
@@ -72,7 +72,7 @@
     </div>
   </div>
   <div
-    class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 justify-between w-full border p-1 gap-2 border-trueGray-600 rounded-md bg-trueGray-300"
+    class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 justify-between w-full border p-1 gap-2 border-gray-600 rounded-md bg-gray-300"
   >
     <div class="flex flex-col gap-1">
       <h3 class="text-lg">{{localize 'swnr.sheet.stats'}}</h3>
@@ -277,7 +277,7 @@
     </div>
   </div>
   <div
-    class="bg-coolGray-300 border border-coolGray-600 rounded-md p-1 flex flex-wrap justify-between"
+    class="bg-gray-300 border border-gray-600 rounded-md p-1 flex flex-wrap justify-between"
   >
     <div class="flex flex-col gap-1" style="flex-grow: 1">
       <h3 class="text-lg">{{localize 'swnr.npc.combat'}}</h3>
