--- a/src/templates/items/weapon-sheet.html
+++ b/src/templates/items/weapon-sheet.html
@@ -38,7 +38,7 @@
         {{localize 'swnr.weapon.shock.label'}}:
       </h3>
       <div>
-        <div>{{localize 'swnr.weapon.shock.damage'}}:</div>
+        <div>{{localize 'swnr.weapon.damage'}}:</div>
         <input
           type="number"
           class="w-8 text-center px-1.5 py-3 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
