migrate save to char from sheet

--- a/src/templates/chat/attack-roll.html
+++ b/src/templates/chat/attack-roll.html
@@ -1,4 +1,4 @@
-<div>
+<div class="chat-card">
   <h3 title="{{ weapon.data.data.description }}">{{ weapon.name }}</h3>
 
   <span title="{{ diceTooltip.hitExplain }}" class="roll roll-hit">{{{ diceTooltip.hit }}}</span>
