--- a/src/templates/items/power-sheet.html
+++ b/src/templates/items/power-sheet.html
@@ -22,5 +22,25 @@
         max="5"
       />
     </div>
+    <div>
+  <label for="">{{localize 'swnr.sheet.powers.roll'}}:</label>
+--roll--
+    </div>
+    <div>
+  <label for="">{{localize 'swnr.sheet.powers.duration'}}:</label>
+--duration--
+    </div>
+    <div>
+  <label for="">{{localize 'swnr.sheet.powers.save'}}:</label>
+--save--
+    </div>
+    <div>
+  <label for="">{{localize 'swnr.sheet.powers.range'}}:</label>
+--range--
+    </div>
+    <div>
+  <label for="">{{localize 'swnr.sheet.powers.prepared'}}:</label>
+--prepared--
+    <div>
   </div>
 </form>
