power chat roll

--- a/src/swnr.pcss
+++ b/src/swnr.pcss
@@ -31,6 +31,12 @@ $chatblue: #d4d5d6;
   //background: url(assets/images/blue-brush.jpg) repeat;
 }
 
+.card-buttons {
+  width: 60%;
+  padding: 4px;
+  margin: auto;
+}
+
 #chat-form textarea {
   width: 100%;
   height: 100%;
