--- a/src/swnr.pcss
+++ b/src/swnr.pcss
@@ -37,6 +37,13 @@ $chatblue: #d4d5d6;
   margin: auto;
 }
 
+.chat-button-small {
+  width: 22px;
+  height:22px;
+  font-size:10px;
+  line-height:1px
+}
+
 #chat-form textarea {
   width: 100%;
   height: 100%;
