--- a/src/templates/actors/fragments/item-table-short.html
+++ b/src/templates/actors/fragments/item-table-short.html
@@ -9,6 +9,8 @@
           <a>{{item.name}}</a>
         </div>
         <div class="item-controls text-right flex-shrink">
+            {{#if item.data.data.ammo}}
+
             {{#if (ne item.data.data.ammo.type "none")}}
                 <a
                   class="item-control item-reload text-gray-600 hover:text-purple-800 transition-colors"
@@ -16,6 +18,7 @@
                 >
                   <i class="fas fa-retweet"></i>
                 </a>
+            {{/if}}
             {{/if}}
           <a class="item-control item-edit text-gray-600 hover:text-purple-800 transition-colors" title='{{localize 'swnr.sheet.edit-item'}}'>
             <i class="fas fa-edit"></i></a>
