--- a/src/templates/actors/npc-sheet.html
+++ b/src/templates/actors/npc-sheet.html
@@ -123,7 +123,7 @@
         {{localize 'swnr.armor.type.label'}}:
         <select
           name="data.armorType"
-          class="border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
+          class="border border-gray-800 pl-1 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
         >
           {{#select actor.data.data.armorType}}
           <option value="primitive">
