--- a/src/templates/actors/vehicle-sheet.html
+++ b/src/templates/actors/vehicle-sheet.html
@@ -19,7 +19,7 @@
         <!-- Ship /  class -->
         <div class="cargo flex flex-col justify-center items-center">
           <select name="data.size"
-            class="border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md">
+            class="pl-1 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md">
             {{#select actor.data.data.size}}
             <option value="s">
               {{localize 'swnr.sheet.vehicle.vehicle-class.s'}}
