--- a/src/templates/actors/drone-sheet.html
+++ b/src/templates/actors/drone-sheet.html
@@ -19,7 +19,7 @@
         <!-- model -->
         <div class="name flex flex-col items-center">
           <select name="data.model"
-            class="border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md">
+            class="pl-1 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md">
             {{#select actor.data.data.model}}
             <option value="">{{localize 'swnr.sheet.drone.models.custom'}}</option>
             <option value="primitiveDrone">
