limited view for each sheet. wonky way to do,but easier than hacking the char template system

--- a/src/templates/actors/character-sheet.html
+++ b/src/templates/actors/character-sheet.html
@@ -1,4 +1,10 @@
 <form class="{{cssClass}} -m-2 p-2 bg-gray-500">
+  {{#if actor.limited}}
+    {{>
+    "systems/swnr/templates/actors/fragments/limited-sheet.html"
+    actor=actor
+    }}
+  {{else}}
   {{>
   "systems/swnr/templates/actors/fragments/char/header.html"
   actor=actor
@@ -60,4 +66,5 @@
       </section>
     </div>
   </div>
+  {{/if}}
 </form>
