--- a/src/templates/actors/npc-sheet.html
+++ b/src/templates/actors/npc-sheet.html
@@ -1,4 +1,10 @@
 <form class="{{cssClass}} bg-gray-500 -m-2 p-2 space-y-2">
+  {{#if actor.limited}}
+    {{>
+    "systems/swnr/templates/actors/fragments/limited-sheet.html"
+    actor=actor
+    }}
+  {{else}}
   <div>
     <div class="flex gap-2">
       <div class="flex-shrink-0 h-40 hidden md:block lg:h-16 md:w-16">
@@ -388,4 +394,5 @@
       >{{actor.data.data.notes.right.contents}}</textarea>
     </div>
   </div>
+  {{/if}}
 </form>
