config currency name

--- a/src/templates/actors/fragments/char/tab-inv.html
+++ b/src/templates/actors/fragments/char/tab-inv.html
@@ -9,7 +9,7 @@
         data-dtype="Number"
         value="{{actor.data.data.credits.debt}}"
       />
-      <label for="data.credits.debt">{{localize 'swnr.credits.debts'}}</label>
+      <label for="data.credits.debt">{{actor.data.data.tweak.debtDisplay}}</label>
     </div>
     <div class="flex flex-col items-center">
       <input
@@ -20,7 +20,7 @@
         data-dtype="Number"
         value="{{actor.data.data.credits.balance}}"
       />
-      <label for="data.credits.balance">{{localize "swnr.credits.balance"}}</label>
+      <label for="data.credits.balance">{{actor.data.data.tweak.balanceDisplay}}</label>
     </div>
     <div class="flex flex-col items-center">
       <input
@@ -31,7 +31,7 @@
         data-dtype="Number"
         value="{{actor.data.data.credits.owed}}"
       />
-      <label for="data.credits.owed">{{localize "swnr.credits.owed"}}</label>
+      <label for="data.credits.owed">{{actor.data.data.tweak.owedDisplay}}</label>
     </div>
   </div>
 
